fix(2024 rewrite): layout shift  (#44)
* refactor: move map under trips table

* feat: add loading skeleton to prevent ui jumps

* style: more spacing to footer

* fix: add aspect ratio class to image to prevent layout shift

--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,3 @@
-.main-animation {
-  animation: page-animation 1s forwards;
-}
-
-@keyframes page-animation {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-.landing-animation {
-  animation: landing-page-animation 800ms forwards;
-}
-
-@keyframes landing-page-animation {
-  0% {
-    opacity: 0;
-    transform: translateY(-10px);
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
 th {
   padding: 1rem;
   text-align: left;
